retrieveUnpackaged/objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Timing__c</fullName>
        <label>Batch Timing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>Fee__c  * 0.2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>